src/components/pages/Contacts/blocks/Offices/Offices.module.css
.container {
    background-image: url(../../../../../assets/images/office_2.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    padding: 100px 50px;
    display: flex;
    flex-wrap: wrap;
    gap: 30px;
    justify-content: space-between;
    align-items: center;
}
.offices_item {
    padding: 50px 25px;
    background-color: rgba(255, 255, 255, 0.86);
    border-radius: 40px;
    font-size: 25px;
    font-weight: 600;
    display: flex;
    flex-direction: column;
    gap: 30px;
    width: 19%;
    min-height: 500px;
    min-width: 351px;
    box-shadow: 0px 4px 22px rgba(0, 0, 0, 0.5);
}
.offices_item__heading {
    font-size: 30px;
    font-weight: 900;
    margin-bottom: 20px;
}
@media (max-width: 1600px) {
    .container {
        justify-content: center;
    }
    .offices_item {
        width: 40%;
        max-width: auto;
    }
}
@media (max-width: 1270px) {
    .offices_item {
        width: 40%;
        min-height: 300px;
        min-width: auto;
        font-size: 20px;
        font-weight: 500;
    }
    .offices_item__heading {
        font-size: 25px;
        font-weight: 900;
        margin-bottom: 0;
    }
}
@media (max-width: 1270px) {
    .container {
        flex-direction: column;
        gap: 50px;
    }
    .offices_item {
        width: 70%;
    }
}
@media (max-width: 630px) {
    .offices_item {
        width: 80%;
    }
}
@media (max-width: 500px) {
    .offices_item {
        padding: 30px 20px;
        width: 100%;
    }
    .container {
        padding: 60px 20px;
    }
}
@media (max-width: 316px) {
    .offices_item {
        font-size: 17px;
    }
}

